--- a/src/Components/HeaderComponents/Header/Header.css
+++ b/src/Components/HeaderComponents/Header/Header.css
@@ -6,6 +6,7 @@
     justify-content: space-around;
     align-items: center;
     background-color: #333;
+    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.5);
 }
 
 .header-snowboard {
@@ -14,6 +15,7 @@
     justify-content: space-around;
     align-items: center;
     background-color: #214c5c;
+    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.5);
 }
 
 #button-logo {
