favorites option ok

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -35,11 +35,10 @@ li {
 }
 
 #footer-link:hover {
-    
-    color: #c4c4c4;
+    color: #e3e3e3;
     text-decoration: underline;
     text-underline-offset: 0.5em;
-    text-decoration-color: #c4c4c4;
+    text-decoration-color: #e3e3e3;
 }
 /* FOOTER */
 
