--- a/src/Components/HomepageComponents/Slideshow/Slideshow.css
+++ b/src/Components/HomepageComponents/Slideshow/Slideshow.css
@@ -88,6 +88,10 @@
   max-width: 100%;
 }
 
+#spotlight-text {
+  text-align: left !important;
+}
+
 #spotlight p{
   padding-top: 1em;
   text-align: right;
