--- a/src/Components/SpotsList/SpotsList.css
+++ b/src/Components/SpotsList/SpotsList.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 5em;
+  gap: 3em;
   padding: 1.5em;
 }
 
@@ -14,78 +14,6 @@
   justify-content: space-between;
   align-items: center;
   padding: 1em;
-}
-
-/* Styles for each spot card */
-#spotslist {
-  width: 30em;
-  background: white;
-  border: 1px solid #e3e3e3;
-  border-radius: 5px;
-  overflow: hidden;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-}
-
-#spotslist-container h2 {
-  background: #e3e3e3;
-  margin: 0;
-  padding: 10px;
-  font-size: 1.2em;
-  color: #000000;
-}
-
-#spotslist-description,
-#spotslist-address {
-  padding-right: 1em;
-}
-
-#spotslist-address {
-  max-width: 60%;
-  margin-bottom: 0em;
-  padding: 0em;
-}
-
-#spotslist-address img {
-  width: 1.2em;
-}
-
-/* Images styles */
-
-#spotslist-image {
-  width: 100%;
-  display: block;
-  aspect-ratio: 1.5/1;
-}
-
-#spotslist-pin {
-  width: 5%;
-}
-
-/* Button styles */
-#spotslist-button-fav {
-  display: flex;
-  align-items: center;
-  background-color: transparent;
-  border:none;
-}
-
-/* Styles for favorite button */
-#spotslist-container button img {
-  display: block;
-  width: 100%;
-}
-
-#spotslist-button-detail {
-  transition: 0.2s ease-in-out;
-  color: white;
-  background-color: #897b68;
-  border-radius: 0.5em;
-  border-color: transparent;
-  padding: 1em;
-}
-
-#spotslist-button-detail:hover {
-  background-color: #e3e3e3;
 }
 
 /* Styles for filter boxes */
@@ -104,4 +32,9 @@
   border-radius: 0.5em;
   background-color: white;
   margin: 0em 0.5em 1em 0;
+}
+
+#filter-box:focus {
+  outline: none !important;
+  border: #e3e3e3 1px solid;
 }
