--- a/src/Components/Spot/CommComponent/CommComponent.css
+++ b/src/Components/Spot/CommComponent/CommComponent.css
@@ -31,6 +31,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: space-between;
   width: 100%;
   padding: 1em;
   margin-bottom: 0.5em;
@@ -43,6 +44,7 @@
 .comments-list h3 {
   margin: 0px;
   color: #897b68;
+  
 }
 
 .comments-list p {
@@ -58,6 +60,17 @@
   border-radius: 100px;
   margin-right: 0.5em;
   object-fit: cover;
+}
+
+.comments-user-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.comment-notation {
+  display: flex;
+  justify-content: flex-end;
 }
 
 /*COMMENTS FORM*/
