--- a/src/Components/Spot/Spot.css
+++ b/src/Components/Spot/Spot.css
@@ -24,6 +24,7 @@
 }
 
 #spot-details-description {
+  display: block;
   width: 100%;
 }
 
@@ -34,10 +35,6 @@
   border-radius: 0.3em;
   font-size: 1.5em;
   color: #000000;
-}
-
-#spot-details-container img {
-  width: 100%;
 }
 
 #spot-details-address img {
@@ -51,46 +48,19 @@
 }
 
 
-
-/* LOADER */
-.loader-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  
-}
-
-#loader-message {
-  margin-top: 1em;
-  color: #897b68;
-  font-weight: bold;
-}
-
-/* LOADER ANIMATION */
-
-@keyframes rotate {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-  
-.loader-img {
-  animation: rotate 1s linear infinite;
-  width: 3em;
-}
-
-
 /* CAROUSEL OPTIONS */
+
+.spot-carousel-img { 
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  aspect-ratio: 1.5/1;
+}
 
 .carousel-control-next-icon {
   background-color: #897b68;
   width: 3em;
   height: 3em;
-  
 }
 
 .carousel-control-prev-icon {
@@ -101,4 +71,23 @@
 
 .carousel-indicators {
   display: none;
+}
+
+.carousel-control-next, .carousel-control-prev {
+  position: absolute;
+  top: 50%;
+  bottom: 50%;
+  z-index: 1;
+  width: 3em;
+  height: 3em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+  background: 0 0;
+  border: 0;
+  opacity: .5;
+  transition: opacity .15s ease;
 }
