--- a/src/Components/Spot/CommComponent/CommComponent.css
+++ b/src/Components/Spot/CommComponent/CommComponent.css
@@ -35,7 +35,7 @@
   width: 100%;
   padding: 1em;
   margin-bottom: 0.5em;
-  border-radius: 8px;
+  border-radius: 0.5em;
   border: #897b68 1px solid;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   background-color: #ffffff;
@@ -73,6 +73,93 @@
   justify-content: flex-end;
 }
 
+.comments-load-button {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  background-color: #897b68;
+  color: white;
+  border-radius: 0.5em;
+  border: none;
+  font-size: small;
+  padding: 1em;
+  text-transform: uppercase;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  transition: ease-in-out 0.2s;
+}
+
+.comments-load-button:hover {
+  background-color: #e3e3e3;
+}
+
+/*RATING*/
+
+.notation-container {
+  width: 100%;
+}
+
+.notation {
+  width: 20%;
+  resize: none;
+  border: #897b68 1px solid;
+  background-color: #ffffff;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  border-radius: 0.5em;
+  padding: 0.5em;
+
+}
+
+.notation:focus {
+  outline: none !important;
+  border: #897b68 1px solid;
+}
+
+#notation-title {
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+  color: #897b68;
+}
+
+
+/*MODAL*/
+
+.modal-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+#button-modal-open {
+  background-color: #897b68;
+  color: white;
+  width: 100%;
+  font-weight: bold;
+  font-size: small;
+  padding: 1em;
+  border-radius: 0.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+#button-modal-open:hover {
+  background-color: #e3e3e3;
+}
+
+.modal-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50em;
+  height: 35em;
+  background-color: #ffffff;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  padding: 0.8em;
+  border-radius: 0.5em;
+}
+
 /*COMMENTS FORM*/
 
 .comments-form {
@@ -103,31 +190,7 @@
   margin-bottom: 0.5em;
 }
 
-/*RATING*/
-
-.notation {
-  width: 100%;
-  resize: none;
-  border: #897b68 1px solid;
-  background-color: #ffffff;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-  border-radius: 0.5em;
-  padding: 0.5em;
-  margin-right: 32.2em;
-}
-
-.notation:focus {
-  outline: none !important;
-  border: #897b68 1px solid;
-}
-
-#notation-title {
-  margin-top: 1em;
-  margin-bottom: 0.5em;
-  color: #897b68;
-}
-
-/*BUTTONS*/
+/*FORM BUTTONS*/
 
 .comments-button-submit {
   display: flex;
@@ -145,12 +208,12 @@
 
 .comments-button-cancel {
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   background-color: #333 !important;
   margin-top: 1em;
-  padding-left: 0em !important;
+  padding-left: 0.2em !important;
   width: 12em !important;
 }
 
@@ -162,37 +225,49 @@
   background-color: red !important;
 }
 
+/*MEDIA QUERIES*/
 
-/*MODAL*/
+@media screen and (max-width: 768px) {
+  .modal-box {
+    width: 70%;
+  }
 
-.modal-container {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  .comments-button-cancel {
+    width: 40% !important;
+  }
+
+  .comments-button-submit {
+    width: 40% !important;
+  }
+
+  .notation {
+    width: 50% !important;
+  }
 }
 
-#button-modal-open {
-  background-color: #897b68;
-  color: white;
-  font-weight: bold;
-  font-size: small;
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
+@media screen and (max-width: 400px) {
+  .modal-box {
+    width: 70%;
+  }
 
-#button-modal-open:hover {
-  background-color: #e3e3e3;
-}
+  .comments-button-cancel {
+    width: 40% !important;
+    padding: 10px !important;
+  }
 
-.modal-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 50em;
-  height: 35em;
-  background-color: #ffffff;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-  padding: 0.8em;
-  border-radius: 0.5em;
+  #button-cancel-img {
+    display: none;
+  }
+
+  .comments-button-submit {
+    width: 40% !important;
+  }
+
+  #button-submit-img {
+    display: none;
+  }
+
+  .notation {
+    width: 50% !important;
+  }
 }
