--- a/src/Components/UserComponents/Profile/Profile.css
+++ b/src/Components/UserComponents/Profile/Profile.css
@@ -71,6 +71,29 @@ button[type="submit"]:hover {
     background-color: #e3e3e3;
 }
 
+
+/*ALERT BOX*/
+
+.swal2-container {
+    padding: 0px;
+    margin: 0px;
+}
+
+.swal2-confirm {
+    background-color: #897b68;
+    border: 0;
+    border-radius: 0.3em;
+    padding: 1em;
+    color: #fff;
+    font-size: 1em;
+    transition: ease-in-out 0.2s;
+}
+
+.swal2-confirm:hover{
+    background-color:#e3e3e3;
+}
+
+
 /* MEDIA QUERIES */
 @media screen and (max-width: 1200px) {
     .user-form {
