--- a/src/Components/HomepageComponents/Slideshow/Slideshow.css
+++ b/src/Components/HomepageComponents/Slideshow/Slideshow.css
@@ -1,6 +1,5 @@
 /* SLIDESHOW */
 
-
 .slideshow {
   overflow: hidden;
   max-width: 60%;
@@ -74,7 +73,7 @@
   background-color: #897b68;
 }
 
-#spotlight h2{
+#spotlight-title {
   color: #FFFFFF; 
   background-color: #897b68; 
   padding: 0.5em 0.5em; 
@@ -99,20 +98,9 @@
   font-weight: bold;
 }
 
-
 /* MEDIA QUERRIES */
 
 @media screen and (max-width: 1400px) {
-  .slideshow {
-    max-width: 60%;
-  }
-
-  #spotlight {
-    max-width: 60%;
-  }
-}
-
-@media screen and (max-width: 1200px) {
   .slideshow {
     max-width: 100%;
   }
@@ -121,6 +109,18 @@
     max-width: 60%;
   }
 }
+
+/* @media screen and (max-width: 1200px) {
+  .slideshow {
+    max-width: 100%;
+    width: 100%;
+  }
+
+  #spotlight {
+    max-width: 60%;
+  }
+
+} */
 
 @media screen and (max-width: 768px) {
   .slideshow {
@@ -132,6 +132,7 @@
     margin-top: 1em;
     margin-left: 1em;
     width: 100%;
+    max-height: 100%;
   }
 
   #spotlight-text {
@@ -148,6 +149,7 @@
 @media screen and (max-width: 480px) {
   .slideshow {
     width: 100%;
+    height: 100%;
   }
 
   #spotlight-text {
@@ -161,7 +163,7 @@
     width: 100%;
   }
 
-  #spotlight h2 {
+  #spotlight-title {
     padding: 0.5em;
   }
 
