--- a/src/Components/Spot/CommComponent/UpdateButton/UpdateButton.css
+++ b/src/Components/Spot/CommComponent/UpdateButton/UpdateButton.css
@@ -7,7 +7,6 @@
   background-color: transparent;
   border:none;
   padding: 0px;
-
 }
 
 .update-button img {
@@ -24,7 +23,8 @@
   flex-wrap: wrap;
   justify-content: right;
   align-items: center;
-  width: 80%;
+  width: 100%;
+  margin-bottom: 0.5em;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
@@ -82,7 +82,7 @@
 
 .edit-notation {
   width: 19%;
-  height: 52.5%;
+  height: 54%;
   resize: none;
   border: #897b68 1px solid;
   background-color: #ffffff;
@@ -95,3 +95,30 @@
   outline: none !important;
   border: #897b68 1px solid;
 }
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 1400px) {
+
+  .editing-container {
+    width: 100%;
+    border: none;
+    padding: 0em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    box-shadow: 0 0px 0px rgba(0,0,0,0.1);
+  }
+  
+  .editing-container textarea {
+    width: 100%;
+    height: 8em;
+    margin-right: 0px;
+    margin-bottom: 0.5em;
+  }
+
+  .edit-notation {
+    width: 100%;
+    height: 3em;
+  }
+}
+
+
