--- a/src/Components/UserComponents/Profile/Profile.css
+++ b/src/Components/UserComponents/Profile/Profile.css
@@ -48,6 +48,15 @@
     box-sizing: border-box;
 }
 
+.form-group input[type="text"]:focus,
+.form-group input[type="email"]:focus,
+.form-group input[type="file"]:focus,
+.form-group input[type="firstname"]:focus,
+.form-group input[type="lastname"]:focus {
+    outline: none !important;
+    border: #897b68 2px solid;
+}
+
 .profile-dashboard-img {
     display: block;
     margin-top: 10px;
