--- a/src/Components/Spot/Spot.css
+++ b/src/Components/Spot/Spot.css
@@ -91,3 +91,30 @@
   opacity: .5;
   transition: opacity .15s ease;
 }
+
+
+/*RETURN BUTTON*/
+
+.backtolist-button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 1em;
+}
+
+.backtolist-button {
+  background-color: transparent;
+  border: none;
+  color: #897b68;
+  font-weight: bold;
+  font-size: small;
+  text-transform: uppercase;
+  transition: ease-in-out 0.2s;
+}
+
+.backtolist-button:hover {
+  color: #e3e3e3;
+}
+
+.backtolist-button img {
+  margin-right: 0.5em;
+}
