--- a/src/Components/UserComponents/HeaderUser/HeaderUser.css
+++ b/src/Components/UserComponents/HeaderUser/HeaderUser.css
@@ -38,7 +38,7 @@
 }
 
 .navbar-light .navbar-toggler-icon {
-  background-image: url("/src/assets/images/menu-regular-24.png");
+  background-image: url("/menu-regular-24.png");
 }
 
 
