--- a/src/Components/HeaderComponents/ToggleTheme/ToggleTheme.css
+++ b/src/Components/HeaderComponents/ToggleTheme/ToggleTheme.css
@@ -54,6 +54,10 @@
     background-color: rgba(0, 0, 0, 0.133) !important;
 }
 
+.css-1cmnqml.Mui-selected {
+    background-color: rgba(0, 0, 0, 0.133) !important;
+}
+
 /*COLLAPSE*/
 
 /*Button*/
